--- a/src/Components/Main/Question/QuestionTypes/GapText.css
+++ b/src/Components/Main/Question/QuestionTypes/GapText.css
@@ -1,15 +1,15 @@
 .question-gap-text{
-  font-size: 1rem;
-  line-height: 2rem; 
+  font-size: 18px;
+  line-height: 2.25rem; 
 }
 
 .question-gap-text input{
-  font-size: 1rem;
+  font-size: 18px;
   padding: 4px 5px;
-  margin: 0 5px;
+  margin: 0 2px;
   outline: none;
   border: none;
-  box-shadow: 0 0 0 1.8px lightgrey;
+  box-shadow: 0 0 0 1.8px rgb(204, 204, 204);
   border-radius: 2px;
   display: inline;
   width: 180px;
@@ -30,7 +30,6 @@
 
 .question-gap-text input{ 
   display: inline;
-  
 }
 
 .question-gap-text table{
@@ -49,7 +48,7 @@
 }
 
 .question-gap-text th, td{ 
-  padding: 0px 5px;
+  padding: 0px 10px;
 }
 
 .question-gap-text .input-enabled:focus, .question-gap-text .input-enabled:active{
