--- a/src/Components/Main/Question/QuestionTypes/MultipleChoice.css
+++ b/src/Components/Main/Question/QuestionTypes/MultipleChoice.css
@@ -46,7 +46,6 @@
 .question-multiple-choice .formControlLabel p img{
   display: block;
   font-size: 1rem;
-  margin: 2px 0;
   object-fit: contain;
   object-position: left center;
   width: 100%;
